--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,22 @@
 		"jest": true
 	},
 	"rules": {
+		"jsx-a11y/label-has-associated-control": [
+			"error",
+			{
+				"required": {
+					"some": ["nesting", "id"]
+				}
+			}
+		],
+		"jsx-a11y/label-has-for": [
+			"error",
+			{
+				"required": {
+					"some": ["nesting", "id"]
+				}
+			}
+		],
 		"react/react-in-jsx-scope": 0,
 		"react-hooks/rules-of-hooks": "error",
 		"no-console": 0,
